contain: resizes the picture to make sure all of the image is fully visible

--- a/style.css
+++ b/style.css
@@ -52,8 +52,7 @@ img {
 
     background-color: rgb(138, 233, 129);
     background-image: url(lime_doe.webp);
-    background-repeat: round;
-    background-size: cover;
+    background-size: contain;
 }
 
 .profile-pic-figure img {
